# jims-filing-cabinet-of-claude-skills

./: .gitignore  .skillcard.toml  LICENSE  Makefile  NOTICE  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml  propose-a-skill.yml  skill-is-wrong.yml
.github/workflows/: badges.yml  validate.yml
assets/: generate_readme_elements.py
scripts/: build_index.py  build_scorecards.py  herocard.py  lint_skills.py
skills/ascii-art/: README.md
skills/ascii-art/ascii-img-react/: README.md  SKILL.md
skills/ascii-art/ascii-img-react/evals/: evals.json
skills/ascii-art/ascii-img-react/references/: component-api.md  technique.md
skills/ascii-art/image-to-ascii/: README.md  SKILL.md  card-review.md  card.authored.yaml  card.json  scan.json  skill-card.md
skills/ascii-art/image-to-ascii/evals/: evals.json
skills/ascii-art/image-to-ascii/references/: technique.md
skills/ascii-art/textmode-js/: README.md  SKILL.md
skills/ascii-art/textmode-js/evals/: evals.json
skills/tui/: README.md
skills/tui/bubbletea/: README.md  card-review.md  card.json  scan.json  skill-card.md
skills/tui/ratatui/: README.md  card-review.md  card.json  scan.json  skill-card.md
skills/tui/textual/: README.md  SKILL.md  card-review.md  card.json  skill-card.md
tooling/califa/: SOURCE  pyproject.toml
tooling/califa/califa_cards.egg-info/: PKG-INFO
tooling/califa/skillcard/: __init__.py  badges.py  cli.py  hashing.py  scorecard.py
tooling/califa/skillcard/harness/: __init__.py  command.py  functional.py  optimize.py  trigger.py
(+25 files in other folders)
